[tool.poetry]
name = "fm-selector"
version = "0.1.0"
description = "Web app to select/change FM tuner"
authors = ["Stephen Chisholm <sbchisholm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
nicegui = "^1.4.15"
lirc = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
